<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ftp 文件管理</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="url">服务器地址</string>

    <!-- 登录界面 -->
    <string name="user">用户名</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="setting">设置</string>
    <string name="press_exit">再按一次退出键退出</string>
    <string name="network_err">当前网络不可用，不能连接服务器！</string>
    <string name="network_normal">wifi已打开！</string>
    <string name="login_err">登录失败！</string>
    <!-- 主页面-->
    <string name="download">下载</string>
    <string name="not_null">所填信息不能为空！</string>
    <string name="title_local">本地文件</string>
    <string name="net_err">不能连接到服务器，请检查网络！</string>
    <string name="upload">上传</string>
    <string name="cut">剪切</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <!-- 设置界面 -->
    <string name="action_settings">设置</string>
    <string name="title_activity_main">服务器</string>
    <string name="sure_Exit">你确定是否退出应用？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>

    <!-- 关于界面 -->
    <string name="weibo_link">http://weibo.com/wuxincaiaaa</string>
    <!-- 用户界面-->
    <string name="addUser">新增账号</string>
    <string name="exit_current_User">注销当前账号</string>
    <string name="userInfo">用户信息</string>
</resources>
