<?xml version="1.0" encoding="utf-8"?>
<!--用户登录信息控件-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >
        <com.wu.ftpfile.UI.MyEdittext
            android:id="@+id/login_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url"
            />

        <com.wu.ftpfile.UI.MyEdittext
            android:id="@+id/login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            />

        <com.wu.ftpfile.UI.MyEdittext
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            />
</LinearLayout>