<?xml version="1.0" encoding="utf-8"?>
<!--用户信息管理页面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:userView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">
    <include
        layout="@layout/nav_bar"
        android:id="@+id/user_navbar">
    </include>
    <com.wu.ftpfile.UI.UserItemView
        android:id="@+id/host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        userView:key="@string/url"
        android:background="#fff"/>
    <com.wu.ftpfile.UI.UserItemView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        userView:key="@string/user"
        android:background="#fff"/>
    <com.wu.ftpfile.UI.UserItemView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        userView:key="@string/pwd"
        android:background="#fff"/>

</LinearLayout>